<resources>
    <string name="app_name">WorkShiftManager</string>
    <string name="action_settings">Settings</string>

    <!-- String Activity WorkshiftManager-->
    <string name="title_app_upper">CONTA ORE</string>

    <!-- String Utility-->
    <string name="back_upper">INDIETRO</string>
    <string name="submit_upper">CONFERMA</string>
    <string name="start_upper">ENTRA</string>
    <string name="exit_upper">ESCI</string>
    <string name="title_activity_work_shift_manager_setting">WorkShiftManagerSetting</string>
    <string name="title_activity_multi_selection_menu">MultiSelectionMenu</string>
    <string name="help">Aiuto</string>

    <!-- MultiSelectionMenu voice -->
    <string name="manageTurn">Gestisci Turni</string>
    <string name="visualTurn">Visualizza turni</string>
    <string name="visualSettimana">Visualizza Ore Settimana</string>
    <string name="displayH">Visualizza ore mensili</string>
    <string name="displayY">Visualizza ore annuali</string>
    <string name="addExtraordinary">Aggiungi straordinari</string>
    <string name="starling">Storno ore</string>
    <string name="modifica_turni">Modifica turni</string>
    <string name="settingbutton">Configurazione</string>

    <!-- application setting voice -->
    <string name="setting">IMPOSTAZIONI</string>
    <string name="orecontratto">ORE</string>
    <string name="allarm">Attivare Allarme prima del turno</string>
    <string name="notifiche">Attivare Notifiche</string>
    <string name="calendar">Attivare Sincronizzazione con Google Calendar</string>
    <string name="title_activity_manage_work_shift">ManageWorkShift</string>
    <string name="title_activity_create_work_shift">CreateWorkShift</string>
    <string name="req_summary">Nome del Google Calendar</string>

    <!-- CreateWorkShift voice -->
    <string name="title_turn_menu">INSERISCI TURNO:</string>
    <string name="inserisci_mattina">Turno mattina</string>
    <string name="inserisci_pomeriggio">Turno pomeriggio</string>
    <string name="importante">Importante</string>
    <string name="title_activity_select_hours">SelectHours</string>

    <!-- Messages -->
    <string name="msg_ok">OK</string>
    <string name="msg_orario_inizio_non_corretto_am">L\'orario mattutino non può iniziare dopo le 13</string>
    <string name="msg_orario_inizio_non_corretto_pm">L\'orario pomeridiano non può iniziare prima delle 13</string>
    <string name="msg_orario_non_corretto">Orario non corretto</string>
    <string name="msg_numero_ore">Numero ore (</string>
    <string name="msg_numero_minuti">Numero minuti (</string>
    <string name="msg_t_non_ammesso">) Non ammesso, non può essere maggiore di </string>
    <string name="msg_valore_non_corretto">Valore non corretto</string>
    <string name="msg_tabella_resettate_ok">Tabella resettata con successo</string>
    <string name="msg_tabella_resettate_ko">Impossibile resettare la tabella</string>
    <string name="matt">mattina</string>
    <string name="pome">pomeriggio</string>
    <!-- SelectHours -->
    <string name="da">Da</string>
    <string name="a">A</string>
    <string name="title_activity_display_work_shift">DisplayWorkShift</string>
    <string name="title_activity_display_turn">DisplayTurn</string>

    <!-- DisplaysWorkShift -->
    <string name="riposo">Riposo</string>
    <string name="importanza">RIUNIONE</string>
    <string name="over">ORE FUORI CONTRATTO:</string>
    <string name="display_ore">ORE:</string>
    <string name="inizio">INIZIO:</string>
    <string name="fine">FINE:</string>
    <string name="cancella">Elimina Turno</string>
    <string name="title_activity_add_overtime">AddOvertime</string>
    <string name="title_activity_select_overtime">SelectOvertime</string>

    <!-- ManageOvertime && Starling -->
    <string name="ore">ORE:</string>
    <string name="minuti">MINUTI:</string>
    <string name="title_overtime_manage">INSERISCI STRAORDINARI:</string>
    <string name="title_starling_manage">INSERISCI STORNO ORE:</string>
    <string name="title_activity_starling_hours">StarlingHours</string>
    <string name="title_activity_display_year">DisplayYear</string>

    <!-- visualYear -->
    <string name="anno">Anno:</string>
    <string name="gennaio">Gennaio</string>
    <string name="febbraio">Febbraio</string>
    <string name="marzo">Marzo</string>
    <string name="aprile">Aprile</string>
    <string name="maggio">Maggio</string>
    <string name="giugno">Giugno</string>
    <string name="luglio">Luglio</string>
    <string name="agosto">Agosto</string>
    <string name="settembre">Settembre</string>
    <string name="ottobre">Ottobre</string>
    <string name="novembre">Novembre</string>
    <string name="dicembre">Dicembre</string>

    <!-- DisplaysMounth -->
    <string name="selectmount">Seleziona il mese desiderato:</string>
    <string name="mounth">Mese:</string>
    <string name="year">Year:</string>
    <string name="title_visual">ORE MENSILI</string>
    <string name="oresettimanali">Ore:</string>
    <string name="straoridinari">Straordinari:</string>
    <string name="title_activity_mounth_selection">MounthSelection</string>
    <string name="title_activity_display_settimana">DisplaySettimana</string>
    <string name="title_activity_display_hour_week">DisplayHourWeek</string>

    <!-- DisplayOreSettimanali -->
    <string name="title_ore_settimanali">Ore settimanali</string>
    <string name="title_activity_display_mounth">DisplayMounth</string>

    <!-- Tutorial -->
    <string name="tutorial_title">Tutorial</string>
    <string name="tutorial_WorkShfitManager">Benvenuto in WorkShiftManager, l\'applicazione che ti consente di gestire i tuoi turni di lavorotreamite l\'applicazione potrai inserire i turni, visualizzarli, tenere traccia delle ore settimanali, aggiungere e rimuovere straordinari, ricevere un Alert prima dell\'inizio del turno e sincronizzare i turni inseriti con i tuoi calendari di Google</string>
    <string name="tutorial_WorkShfitManager_setting">Pagina per la gestione delle impostazioni dell\'applicazione, in questa pagina si pu\ò settare: \n -Il numero di ore settimanali.\n -se ricevere o meno notifiche prima dei turni\n -quanti minuti prima ricevere le notifiche\n -se collegare la applicazione a Google Calendar</string>
    <string name="tutorial_MultiSelectionMenu">Pagina di selezione della funzionalit\à richiesta, una volta toccato il bottone relativo alla funzionalit\à desiderata di verr\à reindirizzati alla pagina di gestione appropriata</string>
    <string name="tutorial_ManageWorkshift">Pagina per la creazione di un nuovo turo, una volta selezionata la data sara\à possibile inserir:\n-Il turno della mattina (facoltativo)\n-il turno del pomeriggio (Facoltativo)\n-se \è importante o meno (facoltativo)\n</string>
    <string name="tutorial_AddOvertime">Pagina per l\'aggiunta degli straordinari in un determinato giorno, una volta selezionato il giorno apparira un pop up in cui \è possibile inserire ore e minuti degli straordinari effettuati</string>
    <string name="tutorial_StarlingHour">Pagina per lo storno delle ore in un determinato giorno, una volta selezionato il giorno apparira un pop up in cui \è possibile inserire le ore e minuti dello storno</string>
    <string name="tutorial_display_week">Pagina per la visualizzare le ore registrate in una determinata settimana, selezionare un gionro all\'interno della settimana desiderata per essere reindirizzati alla pagina di visualizzazione dei dati</string>
    <string name="tutorial_display_turn">Pagina per la visualizzazione del turno lavorativo registrato per una specifica data, una volta selezionata la data si verr\à reindirizzati alla pagina di visualizzazione, se si deisdera da qui \è possibile eliminare il turno </string>
    <string name="tutorial_display_month">Pagina per la visualizzazione delle ore e degli straordinari registrati in un certo mese, dopo l\'inserimento del mese e dell\'anno nella finestra pop up si verr\à reindirizzati alla pagina di visualizzazione dei dati </string>
    <string name="tutorial_display_year">Pagina per la visualizzazione dell\'anno in corso, vengono visualizzate ore mensili e straordinardi suddivisi per mese</string>
    <string name="tutorial_not_available">Tutorial non ancora disponibile</string>
    <string name="title_activity_work_shift_manager_calendar_selection"></string>
    <string name="title_activity_manage_calendar">ManageCalendar</string>

</resources>
