<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cloriti.workshiftmanager.WorkShiftManagerSetting"
    tools:showIn="@layout/activity_work_shift_manager_setting">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="600sp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/setting"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/ore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/title"
            android:layout_alignRight="@+id/title"
            android:layout_below="@+id/titlenbh"
            android:layout_marginTop="19dp"
            android:ems="10"
            android:inputType="number">

            <requestFocus />
        </EditText>


        <TextView
            android:id="@+id/titlenbh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="41dp"
            android:text="@string/orecontratto"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <CheckBox
            android:id="@+id/notify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/ore"
            android:checked="false"
            android:text="@string/notifiche" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/notify"
            android:orientation="vertical">

            <Button
                android:id="@+id/back"
                android:layout_width="364dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:text="@string/back_upper" />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/back"
                android:layout_alignParentStart="true"
                android:text="@string/submit_upper" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>

