<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cloriti.workshiftmanager.display.DisplayTurn"
    tools:showIn="@layout/activity_display_turn">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/iniziovalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/inizio"
            android:layout_below="@+id/inizio"
            android:layout_marginTop="16dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/finepomevalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/iniziopomevalue"
            android:layout_alignBottom="@+id/iniziopomevalue"
            android:layout_alignParentRight="true"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/mattina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="@string/matt"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/finevalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/iniziovalue"
            android:layout_alignBottom="@+id/iniziovalue"
            android:layout_alignParentRight="true"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/pomeriggio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iniziovalue"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:text="@string/pome"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <TextView
            android:id="@+id/importante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iniziopomevalue"
            android:layout_centerHorizontal="true"
            android:text="@string/importanza"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/orefuoricontratto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ore"
            android:layout_toStartOf="@+id/mattina"
            android:text="@string/over"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/finepomeriggio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/iniziopomevalue"
            android:layout_alignParentRight="true"
            android:text="@string/fine"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/iniziopomeriggio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/pomeriggio"
            android:layout_marginTop="27dp"
            android:text="@string/inizio"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/iniziopomevalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/iniziopomeriggio"
            android:layout_marginTop="14dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/inizio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/mattina"
            android:text="@string/inizio"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/fine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/mattina"
            android:text="@string/fine"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/overvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/orevalue"
            android:layout_below="@+id/orevalue"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/ore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/delete"
            android:layout_toStartOf="@+id/importante"
            android:text="@string/display_ore"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/orevalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/importante"
            android:layout_below="@+id/importante"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <CheckBox
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/overvalue"
            android:layout_marginTop="36dp"
            android:checked="false"
            android:text="@string/cancella" />
    </RelativeLayout>
</ScrollView>

